# demo

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  build.sh  conanfile.txt  helloworld.cpp  tests.cpp
.circleci/: config.yml
app/: drawing.cpp  input_processing.cpp  main.cpp
app/include/: drawing.h  input_processing.h  openglwindow.hpp
app/src/: input_processing.cpp
domain/: advance_turtle.cpp  advance_turtle.hpp  calculate_position.cpp  calculate_position.h  calculate_position.hpp  match.hpp  orientation.cpp  orientation.hpp  turtle.hpp  turtle_events.hpp
domain/include/: position.h
domain/src/: calculate_position.cpp
tests/: orientation_tests.cpp  tests.cpp  turtle_tests.cpp
